# strategic-discovery-engine

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_pipeline.py
data/: data-README.html  data:README.md
data/processed/: audit_results.json  location_to_zip_crosswalk.csv  master_table.csv  master_vitality_index.csv  seattle_zip_codes_trimmed.geojson  standardized_tech_surveys.csv
data/raw/: geography.csv  locations.csv  moving.csv  seattle_zip_codes_trimmed.geojson  study.csv
dsr_analysis/: __init__.py  data_loader.py  models.py  spatial.py
dsr_analysis/scripts/: 00_data_audit.py  01_neighborhood_audit.py  02_geojson_trimming.py  03_spatial_join.py  04_clean_surveys.py  05_create_master_table.py  06_eda_visualizations.py  07_statistical_modelling.py  08_model_visualizer.py
notebooks/: 01_amazon_market_inventory_eda.ipynb  dsr_analysis_report.ipynb  eda.ipynb
references/: 2023SurveyCodebook.xlsx
reports/: dsr_analysis_report.ipynb
scripts/: 00_data_audit.py  00_raw_data_visuals.py  01_neighborhood_audit.py  02_spatial_join.py  02a_geojson_trimming.py  02a_trim_geojson.py  02b_spatial_join.py  02b_standardize_surveys.py  02c_standardize_surveys.py  03_merge_data.py  04_exploratory_visuals.py  05_statistical_modeling.py
seattle_vitality/: __init__.py
src/ingestion/: __init__.py  amazon_metadata_streamer.py  scraper.py  stream_market_data.py
src/models/: product_embedder.py  recommender_engine.py
src/processing/: augment_data.py  clean_market_data.py  create_master_list.py  enrich_prices_api.py  process_gold_standards.py  processing_gold_standards.py  purify-master.py
visualizations/final_analysis/: model_comparison_table.txt  professional_model_summary.txt
