[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strategic_discovery_engine"
version = "0.1.0"
description = "Semantic Market Disruption Analysis for Percussive Tools"
readme = "README.md"
authors = [{name = "Aidan Grambihler"}]
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
"numpy~=2.4.1",
"pandas~=3.0.0",
"sentence-transformers~=5.2.2",
"scikit-learn~=1.8.0",
"requests~=2.32.5",
"beautifulsoup4~=4.14.3",
"duckdb~=1.4.4",
"matplotlib~=3.10.8",
"seaborn~=0.13.2"
]

[project.scripts]
run-discovery = "run_pipeline:main"